--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == README
 
-This is a backend API being built as part of a coding challenge by Peek.
+This is a backend API being built as part of a coding challenge for Peek.
